[gd_scene load_steps=5 format=2]

[ext_resource path="res://Screens/RemoteTransform/Skateboarding3D/Skateboard3D.gd" type="Script" id=1]
[ext_resource path="res://Screens/RemoteTransform/Skateboarding3D/Ball.gd" type="Script" id=2]
[ext_resource path="res://Screens/RemoteTransform/Skateboarding3D/HoverboardGreen.tscn" type="PackedScene" id=3]

[sub_resource type="SphereShape" id=2]
radius = 0.5

[node name="Skateboard3D" type="Spatial"]
script = ExtResource( 1 )

[node name="BoardAxis" type="Spatial" parent="."]

[node name="TiltAxis" type="Spatial" parent="BoardAxis"]

[node name="HoverboardGreen" parent="BoardAxis/TiltAxis" instance=ExtResource( 3 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )

[node name="RemoteTransform" type="RemoteTransform" parent="BoardAxis/TiltAxis"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="CameraPoint" type="Spatial" parent="BoardAxis"]
transform = Transform( 1, 0, 0, 0, 1, -5.96046e-08, 0, 5.96046e-08, 1, 1, 0.825, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="BailTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Ball" type="RigidBody" parent="."]
collision_layer = 0
collision_mask = 2
contacts_reported = 3
contact_monitor = true
can_sleep = false
linear_damp = 1.0
angular_damp = 33.0
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Ball"]
shape = SubResource( 2 )

[node name="RemoteTransform" type="RemoteTransform" parent="Ball"]
remote_path = NodePath("../../BoardAxis")
update_rotation = false
update_scale = false
